--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,28 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet"> -->
-</head>
+<link rel="stylesheet" href="styles.71438058c8ed4df2fd4d.css"></head>
+<body class="mat-typography">
+  <app-root></app-root>
+<script src="runtime-es2015.c3a65135c6d5e0d0cb6e.js" type="module"></script><script src="polyfills-es2015.1e4773e8441aaffc12e5.js" type="module"></script><script src="runtime-es5.0d5a35b0b5c581b415b0.js" nomodule defer></script><script src="polyfills-es5.72185abf2e5d3bf0f223.js" nomodule defer></script><script src="main-es2015.8bb23f2305489af14f82.js" type="module"></script><script src="main-es5.2d810a82e40653d93d7d.js" nomodule defer></script></body>
+</html>
+
+<!--  Below is orignal index.html-->
+
+
+<!-- <!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>BlogChatGallery</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet"> -->
+<!-- </head>
 <body class="mat-typography">
   <app-root></app-root>
 </body>
-</html>
+</html> -->
